--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ profile
 DerivedData
 .idea/
 
-DigestTest.xcodeproj/project.xcworkspace/xcuserdata/yongjizhang.xcuserdatad/UserInterfaceState.xcuserstate
+DigestTest.xcodeproj/project.xcworkspace/xcuserdata
